[feat]: add generate random circles and animate

--- a/index.html
+++ b/index.html
@@ -2,18 +2,34 @@
 <html>
   <head>
     <title>PataTappin'</title>
-    <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
+    <link rel="stylesheet" href="assets/css/style.css">
     <script type="text/javascript" src="assets/javascript/paperFull.js"></script>
     <!-- Define inlined PaperScript associate it with myCanvas -->
-    <script type="text/paperscript" canvas="myCanvas">  
+    <script type="text/paperscript" canvas="myCanvas"> 
 
-      var myCircle = new Path.Circle(new Point(200, 90), 60);
-      myCircle.fillColor = 'red';
-      <!-- myCircle.selected = true; -->
+        var circles = [];
+        
+        function onKeyDown(event) {
+          var maxPoint = new Point(view.size.width, view.size.height);
+          var randomPoint = Point.random();
+          var point = maxPoint * randomPoint;
+          var newCircle = new Path.Circle(point, 500);
+          newCircle.fillColor = 'orange';
+          circles.push(newCircle);
+        }
+
+        function onFrame(event) {
+          for(var i = 0; i < circles.length; i++) {
+          console.log(circles[i]);
+            circles[i].fillColor.hue += 1;
+            circles[i].scale(.95);
+          }
+        }
+
     </script>
   </head>
   <body>
-    <h1>Hello Funky World!</h1>
+
     <canvas id="myCanvas" resize></canvas>
 
     <!-- <script type="text/javascript" src="assets/javascript/app.js"></script> -->
