--- a/index.html
+++ b/index.html
@@ -8,61 +8,163 @@
     <!-- Define inlined PaperScript associate it with myCanvas -->
     <script type="text/paperscript" canvas="myCanvas">
       var keyData = {
-        a: {
-          color: 'red',
-          sound: new Howl({
-            urls: ['assets/sounds/bubbles.mp3']
-          })
-        },
-        a: {
-          color: 'blue',
-          sound: new Howl({
-            urls: ['assets/sounds/clay.mp3']
-          })
-        },
-        s: {
-          color: 'purple',
-          sound: new Howl({
-            urls: ['assets/sounds/confetti.mp3']
-          })
-        },
+      q: {
+        sound: new Howl({
+          urls: ['sounds/bubbles.mp3']
+        }),
+        color: '#1abc9c'
+      },
+      w: {
+        sound: new Howl({
+          urls: ['sounds/clay.mp3']
+        }),
+        color: '#2ecc71'
+      },
+      e: {
+        sound: new Howl({
+          urls: ['sounds/confetti.mp3']
+        }),
+        color: '#3498db'
+      },
+      r: {
+        sound: new Howl({
+          urls: ['sounds/corona.mp3']
+        }),
+        color: '#9b59b6'
+      },
+        t: {
+        sound: new Howl({
+          urls: ['sounds/dotted-spiral.mp3']
+        }),
+        color: '#34495e'
+      },
+      y: {
+        sound: new Howl({
+          urls: ['sounds/flash-1.mp3']
+        }),
+        color: '#16a085'
+      },
+      u: {
+        sound: new Howl({
+          urls: ['sounds/flash-2.mp3']
+        }),
+        color: '#27ae60'
+      },
+      i: {
+        sound: new Howl({
+          urls: ['sounds/flash-3.mp3']
+        }),
+        color: '#2980b9'
+      },
+      o: {
+        sound: new Howl({
+          urls: ['sounds/glimmer.mp3']
+        }),
+        color: '#8e44ad'
+      },
+      p: {
+        sound: new Howl({
+          urls: ['sounds/moon.mp3']
+        }),
+        color: '#2c3e50'
+      },
+      a: {
+        sound: new Howl({
+          urls: ['sounds/pinwheel.mp3']
+        }),
+        color: '#f1c40f'
+      },
+      s: {
+        sound: new Howl({
+          urls: ['sounds/piston-1.mp3']
+        }),
+        color: '#e67e22'
+      },
         d: {
-          color: 'orange',
-          sound: new Howl({
-            urls: ['assets/sounds/corona.mp3']
-          })
-        },
-        f: {
-          color: 'yellow',
-          sound: new Howl({
-            urls: ['assets/sounds/dotted-spiral.mp3']
-          })
-        },
-        h: {
-          color: 'lime',
-          sound: new Howl({
-            urls: ['assets/sounds/flash-1.mp3']
-          })
-        },
-        j: {
-          color: 'green',
-          sound: new Howl({
-            urls: ['assets/sounds/glimmer.mp3']
-          })
-        },
-        k: {
-          color: 'dark-blue',
-          sound: new Howl({
-            urls: ['assets/sounds/moon.mp3']
-          })
-        },
-        l: {
-          color: 'brown',
-          sound: new Howl({
-            urls: ['assets/sounds/pinwheel.mp3']
-          })
-        }
+        sound: new Howl({
+          urls: ['sounds/piston-2.mp3']
+        }),
+        color: '#e74c3c'
+      },
+      f: {
+        sound: new Howl({
+          urls: ['sounds/prism-1.mp3']
+        }),
+        color: '#95a5a6'
+      },
+      g: {
+        sound: new Howl({
+          urls: ['sounds/prism-2.mp3']
+        }),
+        color: '#f39c12'
+      },
+      h: {
+        sound: new Howl({
+          urls: ['sounds/prism-3.mp3']
+        }),
+        color: '#d35400'
+      },
+      j: {
+        sound: new Howl({
+          urls: ['sounds/splits.mp3']
+        }),
+        color: '#1abc9c'
+      },
+      k: {
+        sound: new Howl({
+          urls: ['sounds/squiggle.mp3']
+        }),
+        color: '#2ecc71'
+      },
+      l: {
+        sound: new Howl({
+          urls: ['sounds/strike.mp3']
+        }),
+        color: '#3498db'
+      },
+      z: {
+        sound: new Howl({
+          urls: ['sounds/suspension.mp3']
+        }),
+        color: '#9b59b6'
+      },
+      x: {
+        sound: new Howl({
+          urls: ['sounds/timer.mp3']
+        }),
+        color: '#34495e'
+      },
+      c: {
+        sound: new Howl({
+          urls: ['sounds/ufo.mp3']
+        }),
+        color: '#16a085'
+      },
+      v: {
+        sound: new Howl({
+          urls: ['sounds/veil.mp3']
+        }),
+        color: '#27ae60'
+      },
+      b: {
+        sound: new Howl({
+          urls: ['sounds/wipe.mp3']
+        }),
+        color: '#2980b9'
+      },
+      n: {
+        sound: new Howl({
+          urls: ['sounds/zig-zag.mp3']
+        }),
+        color: '#8e44ad'
+      },
+      m: {
+        sound: new Howl({
+          urls: ['sounds/moon.mp3']
+        }),
+        color: '#2c3e50'
       }
+    }
 
       var circles = [];
       
@@ -75,6 +177,7 @@
           newCircle.fillColor = keyData[event.key].color;
           keyData[event.key].sound.play()
           circles.push(newCircle);
+          console.log(circles);
         }
       }
 
